--- a/2.html
+++ b/2.html
@@ -1,1 +1,24 @@
-2
+<!doctype html>
+<html>
+<head>
+<title>WEB2 - html</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1><a href="index.html">WEB</a></h1>
+<div id="grid">
+<ol>
+<li><a href="1.html">1. HTML</a></li>
+<li><a href="2.html">2. CSS</a></li>
+<li><a href="3.html">3. JavaScript</a></li>
+</ol>
+<div id="article">
+<H2>HTML이란 무엇인가?</H2>
+<p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/"target="_blank" title="html5 specification">Hypertext Markup Language (HTML) is the standard markup language</a> for 
+<strong>creating <u>web</u> pages</strong> and web applications.
+</p>가나다라마바사아자차카타파하
+<p> Content </p>
+</div>
+</body>
+</html>
